fix wrap

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -15,6 +15,7 @@
 .code-submit-field {
   width: 100%;
   min-height: 480px;
+  white-space: pre-line;
 }
 .sample {
   display: flex;
